Some cosmetic changes in design_evaluation.tex

--- a/problem_definition/problem_definition.tex
+++ b/problem_definition/problem_definition.tex
@@ -109,6 +109,7 @@ This project aims to design and manufacture a wheeled robot controlled by the mo
 	
 \section{References}
 [1] \texttt{https://www.youtube.com/watch?v=YbNmL6hSNKw}
-	\texttt{https://web.archive.org/web/20150314224900/http://www.lift-report.de/index.php/\\news/176/368/Elevator-Ride-Quality}
+
+[2]	\texttt{https://web.archive.org/web/20150314224900/http://www.lift-report.de/index.php/\\news/176/368/Elevator-Ride-Quality}
 	
 \end{document}
