--- a/design_evaluation/design_evaluation.tex
+++ b/design_evaluation/design_evaluation.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, 10pt, DIV=16, parskip = full, twocolumn = false]{scrartcl}
+\documentclass[a4paper, 10pt, DIV=16, parskip = full, twocolumn = true]{scrartcl}
 \usepackage{setspace}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -6,28 +6,21 @@
 \usepackage{scrlayer-scrpage}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
-\usepackage{subcaption}
+%\usepackage{subcaption}
 \usepackage[section]{placeins}
-\usepackage{pdfpages}
-\usepackage{layout}
+%\usepackage{pdfpages}
+%\usepackage{layout}
 \usepackage{enumitem}
 \usepackage{booktabs}
-\usepackage{listings}
-\usepackage{tablefootnote}
-\usepackage{color}
+
 \usepackage{placeins}
 \usepackage{inconsolata}
 \usepackage[bottom]{footmisc}
 \usepackage[group-digits=false]{siunitx}
 \usepackage{caption}
-\usepackage{tikz}
-\usetikzlibrary{shapes, scopes, decorations.pathmorphing, decorations.markings, patterns, calc}
-%\usepackage{steinmetz} % Phasor notation
-%\usepackage{mathptmx} % Adobe Times Roman
-\usepackage{physics} % Derivative notation
-\usepackage{lipsum}
 
-\graphicspath{{./figures/}}
+%\usepackage{lipsum}
+\usepackage{cuted}
 
 %\setlength{\parskip}{3pt}
 \setlength{\columnsep}{15pt}
@@ -45,37 +38,10 @@
 \renewcommand{\theequation}{\arabic{equation}}
 \renewcommand{\thefigure}{\arabic{figure}}
 \renewcommand{\thetable}{\arabic{table}}
-\renewcommand{\vec}[1]{\mathbf{#1}}
-\newcommand{\answer}[1]{\tag{Ans. #1}}
-\newcommand{\unit}[1]{\mathrm{#1}}
-\newcommand{\eunit}[1]{\enspace\mathrm{#1}}
-\newcommand{\ui}{\hat{\imath}}
-\newcommand{\uj}{\hat{\jmath}}
-\newcommand{\uk}{\hat{\kmath}}
-\newcommand{\eps}{\varepsilon}
-\newcommand{\degrees}{^{\circ}}
-\definecolor{dkgreen}{rgb}{0,0.6,0}
-\definecolor{gray}{rgb}{0.5,0.5,0.5}
-\definecolor{mauve}{rgb}{0.58,0,0.82}
-\lstset{ frame=single,
-	language=Matlab,
-	aboveskip=3mm,
-	belowskip=3mm,
-	showstringspaces=false,
-	columns=flexible,
-	keepspaces=true, 
-	basicstyle={\small\ttfamily},
-	numbers=none,
-	numberstyle=\tiny\color{gray},
-	keywordstyle=\color{blue},
-	commentstyle=\color{dkgreen},
-	stringstyle=\color{mauve},
-	breaklines=true,
-	postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space},
-	breakatwhitespace=true,
-	captionpos=t,
-	tabsize=3
-}
+
+% squeeze tables
+\renewcommand{\arraystretch}{0.7}
+\renewcommand{\tabcolsep}{1mm}
 
 \begin{document}
 	\maketitle
@@ -88,16 +54,17 @@
 
 Design alternatives has been explored for each function of a wheeled robot controlled by the movement of a fish swimming inside an aquarium (Robofish). The functional decomposition schematic of Robofish is as shown in Figure \ref{fig:funcdecomp}. The generated concepts for each function and their respective evaluation criteria has been summarized in Table \ref{table:concepts} and \ref{table:criterion}. Note that the functions, concepts and evaluation criteria will be referred by their function ID (FID), concept ID (CID) and evaluation ID (EID), respectively, in the remainder of this document. The CID of the highest scoring concepts will be presented in bold throughout the document. Datum concepts will be denoted with a star. The evaluation criteria are weighted using the analytic hierarchy process (AHP) in Tables \ref{table:AHP1-1}-\ref{table:AHP5-2}. The generated concepts are systematically evaluated in Tables \ref{table:pugh1-1}-\ref{table:pugh5-2} using weighted decision-matrix (Pugh) method.
 
-\begin{figure}[!h]
+\begin{strip}
+	\break\break\break
 	\centering
-	\includegraphics[width=0.9\columnwidth]{../functional_decomposition/functional_decomposition.pdf}
-	\caption{The functional decomposition.}
+	\includegraphics[width=0.8\pagewidth]{../functional_decomposition/functional_decomposition.pdf}
+	\captionof{figure}{The functional decomposition.}
 	\label{fig:funcdecomp}
-\end{figure}
+\end{strip}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{table}
+\begin{table*}
 \centering
 \caption{Generated concepts for the functions of Robofish}
 	\begin{tabular}{rlrl}
@@ -151,9 +118,9 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\bottomrule
 	\end{tabular}
 \label{table:concepts}
-\end{table}
+\end{table*}
 
-\begin{table}
+\begin{table*}
 	\centering
 	\caption{Concept evaluation criteria for the functions of Robofish}
 	\begin{tabular}{rlrl}
@@ -219,14 +186,16 @@ Design alternatives has been explored for each function of a wheeled robot contr
 		\bottomrule
 	\end{tabular}
 \label{table:criterion}
-\end{table}
+\end{table*}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%\section{Criteria weighting}
+
 \begin{table}
 	\centering
-	\caption{AHP for criteria of 1-1: Carry the aquarium}
-	\begin{tabular}{l|sssss|S}
+	\caption{AHP for 1-1: Carry the aquarium}
+	\begin{tabular}{l|sssssS}
 		\toprule
 		& \text{1-1E1} & \text{1-1E2} & \text{1-1E3} & \text{1-1E4} & \text{1-1E5} & \text{Weight (\%)} \\
 		\midrule
@@ -240,8 +209,8 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:AHP1-1}
 	
 	\centering
-	\caption{AHP for criteria of 1-2: Detect the position of fish}
-	\begin{tabular}{l|sssss|S}
+	\caption{AHP for 1-2: Detect the position of fish}
+	\begin{tabular}{l|sssssS}
 		\toprule
 		& \text{1-2E1} & \text{1-2E2} & \text{1-2E3} & \text{1-2E4} & \text{1-2E5} & \text{Weight (\%)} \\
 		\midrule
@@ -255,8 +224,8 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:AHP1-2}
 	
 	\centering
-	\caption{AHP for criteria of 1-3: Detect the obstacles}
-	\begin{tabular}{l|ssss|S}
+	\caption{AHP for 1-3: Detect the obstacles}
+	\begin{tabular}{l|ssssS}
 		\toprule
 		& \text{1-3E1} & \text{1-3E2} & \text{1-3E3} & \text{1-3E4} & \text{Weight (\%)} \\
 		\midrule
@@ -269,8 +238,8 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:AHP1-3}
 	
 	\centering
-	\caption{AHP for criteria of 1-4: Detect the position of the robot}
-	\begin{tabular}{l|ssss|S}
+	\caption{AHP for 1-4: Detect the position of the robot}
+	\begin{tabular}{l|ssssS}
 		\toprule
 		& \text{1-4E1} & \text{1-4E2} & \text{1-4E3} & \text{1-4E4} & \text{Weight (\%)} \\
 		\midrule
@@ -283,8 +252,8 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:AHP1-4}
 	
 	\centering
-	\caption{AHP for criteria of 1-5: Facilitate the movement}
-	\begin{tabular}{l|sssss|S}
+	\caption{AHP for 1-5: Facilitate the movement}
+	\begin{tabular}{l|sssssS}
 		\toprule
 		& \text{1-5E1} & \text{1-5E2} & \text{1-5E3} & \text{1-5E4} & \text{1-5E5} & \text{Weight (\%)} \\
 		\midrule
@@ -298,8 +267,8 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:AHP1-5}
 	
 	\centering
-	\caption{AHP for criteria of 1-6: Actuate the movement}
-	\begin{tabular}{l|sssss|S}
+	\caption{AHP for 1-6: Actuate the movement}
+	\begin{tabular}{l|sssssS}
 		\toprule
 		& \text{1-6E1} & \text{1-6E2} & \text{1-6E3} & \text{1-6E4} & \text{1-6E5} & \text{Weight (\%)} \\
 		\midrule
@@ -311,10 +280,14 @@ Design alternatives has been explored for each function of a wheeled robot contr
 		\bottomrule
 	\end{tabular}
 	\label{table:AHP1-6}
+
+\end{table}
+
+\begin{table}
 	
 	\centering
-	\caption{AHP for criteria of 1-7: Control the movement}
-	\begin{tabular}{l|ssss|S}
+	\caption{AHP for 1-7: Control the movement}
+	\begin{tabular}{l|ssssS}
 		\toprule
 		& \text{1-7E1} & \text{1-7E2} & \text{1-7E3} & \text{1-7E4} & \text{Weight (\%)} \\
 		\midrule
@@ -325,12 +298,10 @@ Design alternatives has been explored for each function of a wheeled robot contr
 		\bottomrule
 	\end{tabular}
 	\label{table:AHP1-7}
-\end{table}
-
-\begin{table}
+	
 	\centering
-	\caption{AHP for criteria of 2-1: Send \& receive network messages}
-	\begin{tabular}{l|sss|S}
+	\caption{AHP for 2-1: Send \& receive network messages}
+	\begin{tabular}{l|sssS}
 		\toprule
 		& \text{2-1E1} & \text{2-1E2} & \text{2-1E3} & \text{Weight (\%)} \\
 		\midrule
@@ -342,8 +313,8 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:AHP2-1}
 	
 	\centering
-	\caption{AHP for criteria of 2-2: Display the current status}
-	\begin{tabular}{l|sssss|S}
+	\caption{AHP for 2-2: Display the current status}
+	\begin{tabular}{l|sssssS}
 		\toprule
 		& \text{2-2E1} & \text{2-2E2} & \text{2-2E3} & \text{2-2E4} & \text{2-2E5} & \text{Weight (\%)} \\
 		\midrule
@@ -357,8 +328,8 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:AHP2-2}
 	
     \centering
-	\caption{AHP for criteria of 3-1: Communicate with the fish}
-	\begin{tabular}{l|ssss|S}
+	\caption{AHP for 3-1: Communicate with the fish}
+	\begin{tabular}{l|ssssS}
 		\toprule
 		& \text{3-1E1} & \text{3-1E2} & \text{3-1E3} & \text{3-1E4} & \text{Weight (\%)} \\
 		\midrule
@@ -371,8 +342,8 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:AHP3-1}
 	
  \centering
-	\caption{AHP for criteria of 4.1: Contain the water \& fish }
-	\begin{tabular}{l|sssss|S}
+	\caption{AHP for 4.1: Contain the water \& fish }
+	\begin{tabular}{l|sssssS}
 		\toprule
 		& \text{4-1E1} & \text{4-1E2} & \text{4-1E3} & \text{4-1E4} & \text{4-1E5} & \text{Weight (\%)} \\
 		\midrule
@@ -386,8 +357,8 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:AHP4-1}
 	
 	\centering
-	\caption{AHP for criteria of 5.1: Store the power }
-	\begin{tabular}{l|sss|S}
+	\caption{AHP for 5.1: Store the power }
+	\begin{tabular}{l|sssS}
 		\toprule
 		& \text{5-1E1} & \text{5-1E2} & \text{5-1E3} & \text{Weight (\%)} \\
 		\midrule
@@ -399,8 +370,8 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:AHP5-1}
 	
 	\centering
-	\caption{AHP for criteria of 5.2: Charge the storage }
-	\begin{tabular}{l|ssss|S}
+	\caption{AHP for 5.2: Charge the storage }
+	\begin{tabular}{l|ssssS}
 		\toprule
 		& \text{5-2E1} & \text{5-2E2} & \text{5-2E3} & \text{5-2E4} & \text{Weight (\%)} \\
 		\midrule
@@ -414,13 +385,14 @@ Design alternatives has been explored for each function of a wheeled robot contr
 \end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\section{Decision-matrices}
 
 \begin{table}
 	\centering
-	\caption{Decision-matrix for criteria of 1-1: Carry the aquarium}
+	\caption{Decision-matrix for 1-1: Carry the aquarium}
 	\begin{tabular}{rS|ccccc}
 		\toprule
-		Criterion & \text{Weight (\%)} &\text{1-1C1} & \textbf{1-1C2} & \text{1-1C3*}  & \text{1-1C4} & \text{1-1C5} \\
+		& \text{(\%)} & \text{1-1C1} & \textbf{1-1C2} & \text{1-1C3*}  & \text{1-1C4} & \text{1-1C5} \\
 		\midrule
 		1-1E1 & 12.4 & 1 & 1 & D & 0 & -1 \\
 		1-1E2 & 43.3 & -1 & 1 & D & -1 & -1 \\
@@ -434,10 +406,10 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:pugh1-1}
 	
 	\centering
-	\caption{Decision-matrix for criteria of 1-2: Detect the position of fish}
+	\caption{Decision-matrix for 1-2: Detect the position of fish}
 	\begin{tabular}{rS|ccc}
 		\toprule
-		Criterion & \text{Weight (\%)} &\textbf{1-2C1*} & \text{1-2C2} & \text{1-2C3} \\
+		& \text{(\%)} & \textbf{1-2C1*} & \text{1-2C2} & \text{1-2C3} \\
 		\midrule
 		1-2E1 & 34.5 & D & -1 & -1 \\
 		1-2E2 & 35.6 & D & -1 & 1  \\
@@ -451,10 +423,10 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:pugh1-2}
 	
 	\centering
-	\caption{Decision-matrix for criteria of 1-3: Detect the obstacles}
+	\caption{Decision-matrix for 1-3: Detect the obstacles}
 	\begin{tabular}{rS|ccc}
 		\toprule
-		Criterion & \text{Weight (\%)} &\textbf{1-3C1*} & \text{1-3C2} & \text{1-3C3}\\
+		& \text{(\%)} & \textbf{1-3C1*} & \text{1-3C2} & \text{1-3C3}\\
 		\midrule
 		1-3E1 & 37.2 & D & -1 & -1\\
 		1-3E2 & 6.74 & D & -1 & -1 \\
@@ -467,10 +439,10 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:pugh1-3}
 	
 	\centering
-	\caption{Decision-matrix for criteria of 1-4: Detect the position of the robot}
+	\caption{Decision-matrix for 1-4: Detect the position of the robot}
 	\begin{tabular}{rS|ccc}
 		\toprule
-		Criterion & \text{Weight (\%)} & \text{1-4C1*} & \textbf{1-4C2} & \text{1-4C3}\\
+		& \text{(\%)} & \text{1-4C1*} & \textbf{1-4C2} & \text{1-4C3}\\
 		\midrule
 		1-4E1 & 6.87 & D & -1 & 1 \\
 		1-4E2 & 38.9 & D & 1 & 1  \\
@@ -483,10 +455,10 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:pugh1-4}
 	
 	\centering
-	\caption{Decision-matrix for criteria of 1-5: Facilitate the movement}
+	\caption{Decision-matrix for 1-5: Facilitate the movement}
 	\begin{tabular}{rS|ccccc}
 		\toprule
-		Criterion & \text{Weight (\%)} & \textbf{1-5C1} & \text{1-5C2} & \text{1-5C3*} & \text{1-5C4} & \text{1-5C5} \\
+		& \text{(\%)} & \textbf{1-5C1} & \text{1-5C2} & \text{1-5C3*} & \text{1-5C4} & \text{1-5C5} \\
 		\midrule
 		1-5E1 & 45.8 & 1 & 1 & D & 0 & 0 \\
 		1-5E2 & 24.7 & 1 & 1 & D & 0 & -1 \\
@@ -499,11 +471,16 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\end{tabular}
 	\label{table:pugh1-5}
 	
+
+\end{table}
+
+\begin{table}
+	
 	\centering
-	\caption{Decision-matrix for criteria of 1-6: Actuate the movement}
+	\caption{Decision-matrix for 1-6: Actuate the movement}
 	\begin{tabular}{rS|ccc}
 		\toprule
-		Criterion & \text{Weight (\%)} & \textbf{1-6C1} & \text{1-6C2*} & \text{1-6C3} \\
+		& \text{(\%)} & \textbf{1-6C1} & \text{1-6C2*} & \text{1-6C3} \\
 		\midrule
 		1-6E1 & 9.76 & 1 & D & 0\\
 		1-6E2 & 34.1 & 0 & D & 1 \\
@@ -515,15 +492,12 @@ Design alternatives has been explored for each function of a wheeled robot contr
 		\bottomrule
 	\end{tabular}
 	\label{table:pugh1-6}
-
-\end{table}
-
-\begin{table}
+	
 	\centering
-	\caption{Decision-matrix for criteria of 1-7: Control the movement}
+	\caption{Decision-matrix for 1-7: Control the movement}
 	\begin{tabular}{rS|ccc}
 		\toprule
-		Criterion & \text{Weight (\%)} & \textbf{1-7C1} & \text{1-7C2} & \text{1-7C3*} \\
+		& \text{(\%)} & \textbf{1-7C1} & \text{1-7C2} & \text{1-7C3*} \\
 		\midrule
 		1-7E1 & 6.70 & -1 & -1 & D \\
 		1-7E2 & 49.1 & 1 & 1 & D \\
@@ -536,10 +510,10 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:pugh1-7}
 	
 	\centering
-	\caption{Decision-matrix for criteria of 2-1: Send \& receive network messages}
+	\caption{Decision-matrix for 2-1: Send \& receive network messages}
 	\begin{tabular}{rS|ccc}
 		\toprule
-		Criterion & \text{Weight (\%)} & \textbf{2-1C1} & \text{2-1C2*} & \text{2-1C3} \\
+		& \text{(\%)} & \textbf{2-1C1} & \text{2-1C2*} & \text{2-1C3} \\
 		\midrule
 		2-1E1 & 8.97 & -1 & D & -1 \\
 		2-1E2 & 60.7 & 1 & D & 0\\
@@ -551,10 +525,10 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:pugh2-1}
 	
 	\centering
-	\caption{Decision-matrix for criteria of 2-2: Display the current status}
+	\caption{Decision-matrix for 2-2: Display the current status}
 	\begin{tabular}{rS|ccc}
 		\toprule
-		Criterion & \text{Weight (\%)} & \textbf{2-2C1*} & \text{2-2C2} & \text{2-2C3} \\
+		& \text{(\%)} & \textbf{2-2C1*} & \text{2-2C2} & \text{2-2C3} \\
 		\midrule
 		2-2E1 & 5.91 & D & -1 & -1 \\
 		2-2E2 & 10.5 & D & -1 & -1 \\
@@ -568,10 +542,10 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\label{table:pugh2-2}
 	
 	\centering
-	\caption{Decision-matrix for criteria of 3-1: Communicate with the fish}
+	\caption{Decision-matrix for 3-1: Communicate with the fish}
 	\begin{tabular}{rS|cc}
 		\toprule
-		Criterion & \text{Weight (\%)} & \textbf{3-1C1*} & \text{3-1C2}\\
+		& \text{(\%)} & \textbf{3-1C1*} & \text{3-1C2}\\
 		\midrule
 		3-1E1 & 7.68 & D & -1 \\
 		3-1E2 & 15.9 & D & -1 \\
@@ -583,11 +557,18 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\end{tabular}
 	\label{table:pugh3-1}
 	
+
+
+\end{table}
+
+\clearpage
+\begin{table}[htp!]
+	
 	\centering
-	\caption{Decision-matrix for criteria of 4.1: Contain the water \& fish }
+	\caption{Decision-matrix for 4-1: Contain the water \& fish }
 	\begin{tabular}{rS|ccc}
 		\toprule
-		Criterion & \text{Weight (\%)} & \textbf{4-1C1} & \text{4-1C2*} & \text{4-1C3} \\
+		& \text{(\%)} & \textbf{4-1C1} & \text{4-1C2*} & \text{4-1C3} \\
 		\midrule
 		4-1E1 & 6.00 & 1 & D & -1\\
 		4-1E2 & 41.4 & 1 & D & 1 \\
@@ -599,12 +580,12 @@ Design alternatives has been explored for each function of a wheeled robot contr
 		\bottomrule
 	\end{tabular}
 	\label{table:pugh4-1}
-	
+		
 	\centering
-	\caption{Decision-matrix for criteria of 5.1: Store the power }
+	\caption{Decision-matrix for 5-1: Store the power }
 	\begin{tabular}{rS|cccc}
 		\toprule
-		Criterion & \text{Weight (\%)} & \text{5-1C1} & \text{5-1C2} & \text{5-1C3*} & \textbf{5-1C4} \\
+		& \text{(\%)} & \text{5-1C1} & \text{5-1C2} & \text{5-1C3*} & \textbf{5-1C4} \\
 		\midrule
 		5-1E1 & 14.0 & 1 & -1 & D & 1 \\
 		5-1E2 & 57.4 & -1 & 1 & D & 1 \\
@@ -614,16 +595,12 @@ Design alternatives has been explored for each function of a wheeled robot contr
 		\bottomrule
 	\end{tabular}
 	\label{table:pugh5-1}
-\end{table}
-
-\clearpage
-
-\begin{table}[htp!]	
+	
 	\centering
-	\caption{Decision-matrix for criteria of 5.2: Charge the storage }
+	\caption{Decision-matrix for 5-2: Charge the storage }
 	\begin{tabular}{rS|cccc}
 		\toprule
-		Criterion & \text{Weight (\%)} & \textbf{5-2C1} & \textbf{5-2C2} & \text{5-2C3*} & \text{5-2C4} \\
+		& \text{(\%)} & \textbf{5-2C1} & \textbf{5-2C2} & \text{5-2C3*} & \text{5-2C4} \\
 		\midrule
 		5-2E1 & 7.65 & 1 & 1 & D & -1 \\
 		5-2E2 & 54.3 & 1 & 1 & D & -1 \\
