--- a/design_evaluation/design_evaluation.tex
+++ b/design_evaluation/design_evaluation.tex
@@ -66,53 +66,61 @@ Design alternatives has been explored for each function of a wheeled robot contr
 
 \begin{table*}
 \centering
-\caption{Generated concepts for the functions of Robofish}
+\caption{Generated concepts for the functions of Robofish (most promising concepts in bold).}
 	\begin{tabular}{rlrl}
 	\toprule
 		FID & Function Name & CID & Concept \\
 	\midrule
 		1-1 & Carry the aquarium & 1-1C1 & Glued platform \\	
-	 	& & \textbf{1-1C2} & Positive contact due to gravity \\	
+	 	& & \textbf{1-1C2} & \textbf{Positive contact due to gravity} \\	
 		& & 1-1C3 & Assembled to a platform with holes \\	
 		& & 1-1C4 & Components directly assembled \\	
 		& & 1-1C5 & Components directly assembled, segmented aquarium \\	
-		1-2 & Detect the position of fish & \textbf{1-2C1} & Webcam \& Raspberry Pi \\
+		1-2 & Detect the position of fish & \textbf{1-2C1} & \textbf{Webcam \& Raspberry Pi} \\
 		& & 1-2C2 & ESP32-CAM \\	
 		& & 1-2C3 & Raspberry Pi Camera \\	
-		1-3 & Detect the obstacles & 1-3C1 & Ultrasonic sensors \\
+		1-3 & Detect the obstacles & \textbf{1-3C1} & \textbf{Ultrasonic sensors} \\
 		& & 1-3C2 & Wide lens camera on the robot \\	
 		& & 1-3C3 & Overhead camera (not attached to the robot) \\
 		1-4 & Detect the position of robot & 1-4C1 & Overhead camera (not attached to the robot) \\	 
-		& & \textbf{1-4C2} & Wide lens camera on the robot \\
+		& & \textbf{1-4C2} & \textbf{Wide lens camera on the robot} \\
 		& & 1-4C3 & No camera (using available sensor data \& encoder) \\
-		1-5 & Facilitate the movement & \textbf{1-5C1} & 3D printed mechanum wheels \\
-		& & 1-5C2 & Machined mechanum wheels \\	
+		& & 1-4C4 & Multiple cameras on the robot \\
+		1-5 & Facilitate the movement & \textbf{1-5C1} & \textbf{3D printed mechanum/omni wheels} \\
+		& & 1-5C2 & Machined mechanum/omni wheels \\	
 		& & 1-5C3 & Differential drive \\
 		& & 1-5C4 & Tracks \\	
 		& & 1-5C5 & Steered wheels \\
-		1-6 & Actuate the movement & \textbf{1-6C1} & Brushless DC motor \\
+		1-6 & Actuate the movement & \textbf{1-6C1} & \textbf{Brushless DC motor} \\
 		& & 1-6C2 & Brushed DC motor \\	
 		& & 1-6C3 & Stepper motor \\
-		1-7 & Control the movement & \textbf{1-7C1} & Raspberry Pi \\
+		1-7 & Control the movement & \textbf{1-7C1} & \textbf{Raspberry Pi} \\
 		& & 1-7C2 & Dedicated PC (connected via cable or network module) \\	
 		& & 1-7C3 & Arduino microprocessor \\	
-		2-1 & Send \& receive network messages & \textbf{2-1C1} & Raspberry Pi \\
+		2-1 & Send \& receive network messages & \textbf{2-1C1} & \textbf{Raspberry Pi} \\
 		& & 2-1C2 & Network module \\	
 		& & 2-1C3 & Arduino Wi-Fi module \\
-		2-2 & Display the current status & \textbf{2-2C1} & LED indicator lights\\
+		2-2 & Display the current status & \textbf{2-2C1} & \textbf{LED indicator lights} \\
 		& & 2-2C2 & Speakers \\	
 		& & 2-2C3 & Monitor \\	
-		3-1 & Communicate with the fish & \textbf{3-1C1} & LED lighting \\
+		3-1 & Communicate with the fish & \textbf{3-1C1} & \textbf{LED lighting} \\
 		& & 3-1C2 & Monitor (attached to the robot) \\		
-		4-1 & Contain the water \& fish & \textbf{4-1C1} & Plastic aquarium \\
+		4-1 & Contain the water \& fish & \textbf{4-1C1} & \textbf{Plastic aquarium} \\
 		& & 4-1C2 & Spherical glass aquarium \\	
 		& & 4-1C3 & Prismatic glass aquarium \\
+		4-2 & Feed the fish & 4-2C1 & Servo trapdoor \\
+		& & \textbf{4-2C2} & \textbf{Power screw} \\	
+		& & 4-2C3 & Conveyor belt \\
+		& & 4-2C4 & Linear actuator with magazine \\
+		4-3 & Protect the fish against cats & 4-3C1 & Cat repellent noise \\
+		& & \textbf{4-3C2} & \textbf{Top cover} \\	
+		& & 4-3C3 & Movement based defense \\
 		5-1 & Store the power & 5-1C1 & Ni-Cad battery \\
 		& & 5-1C2 & Li-Po battery \\	
 		& & 5-1C3 & Li-Ion battery \\
-		& & \textbf{5-1C4} & Dry accumulator \\	
-		5-2 & Charge the storage & \textbf{5-2C1} & Dangling magnet attached to the room \\
-		& & \textbf{5-2C2} & Dangling magnet attached to the robot \\	
+		& & \textbf{5-1C4} & \textbf{Dry accumulator} \\	
+		5-2 & Charge the storage & \textbf{5-2C1} & \textbf{Dangling magnet attached to the room} \\
+		& & \textbf{5-2C2} & \textbf{Dangling magnet attached to the robot} \\	
 		& & 5-2C3 & Mechanical connection \\
 		& & 5-2C4 & Inductive charging \\
 	\bottomrule
@@ -176,6 +184,14 @@ Design alternatives has been explored for each function of a wheeled robot contr
 		& & 4-1E3 & Weight \\
 		& & 4-1E4 & Visibility (by the camera, if one exists) \\
 		& & 4-1E5 & Aesthetics \\
+		4-2 & Feed the fish & 4-2E1 & Maintenance requirement \\
+		& & 4-2E2 & Compactness \\	
+		& & 4-2E3 & Portioning precision \\
+		& & 4-2E4 & Manufacturability \\
+		4-3 & Protect the fish against cats & 4-3E1 & Effectiveness \\
+		& & 4-3E2 & Cost \\	
+		& & 4-3E3 & Manufacturability \\
+		& & 4-3E4 & Reliability (ability to be effective in different situations) \\
 		5-1 & Store the power & 5-1E1 & Cost \\
 		& & 5-1E2 & Durability (life of the battery) \\	
 		& & 5-1E3 & Capacity per weight \\
@@ -341,7 +357,7 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\end{tabular}
 	\label{table:AHP3-1}
 	
- \centering
+ 	\centering
 	\caption{AHP for 4.1: Contain the water \& fish }
 	\begin{tabular}{l|sssssS}
 		\toprule
@@ -356,6 +372,42 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\end{tabular}
 	\label{table:AHP4-1}
 	
+	\centering
+	\caption{AHP for 4.2: Feed the fish }
+	\begin{tabular}{l|ssssS}
+		\toprule
+		& \text{4-2E1} & \text{4-2E2} & \text{4-2E3} & \text{4-2E4} & \text{Weight (\%)} \\
+		\midrule
+		4-1E1 & 1 & 5 & 1/3 & 5 & 25.8 \\
+		4-1E2 & & 1 & 1/5 & 1 & 9.75 \\
+		4-1E3 & & & 1 & 5 & 43.8 \\
+		4-1E4 & & & & 1 & 20.7 \\
+		\bottomrule
+	\end{tabular}
+	\label{table:AHP4-2}
+	
+	/centering
+	\caption{AHP for 4.3: Protect the fish against cats}
+	\begin{tabular}{l|ssssS}
+		\toprule
+		& \text{4-3E1} & \text{4-3E2} & \text{4-3E3} & \text{4-3E4} & \text{Weight (\%)} \\
+		\midrule
+		4-1E1 & 1 & 5 & 5 & 1 & 33. 0\\
+		4-1E2 & & 1 & 1/3 & 1/5 & 9.88 \\
+		4-1E3 & & & 1 & 1/5 & 15.9 \\
+		4-1E4 & & & & 1 & 41.2 \\
+		\bottomrule
+	\end{tabular}
+	\label{table:AHP4-3}
+\end{table}
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\section{Decision-matrices}
+
+\begin{table}
 	\centering
 	\caption{AHP for 5.1: Store the power }
 	\begin{tabular}{l|sssS}
@@ -382,12 +434,7 @@ Design alternatives has been explored for each function of a wheeled robot contr
 		\bottomrule
 	\end{tabular}
 	\label{table:AHP5-2}
-\end{table}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\section{Decision-matrices}
-
-\begin{table}
+	
 	\centering
 	\caption{Decision-matrix for 1-1: Carry the aquarium}
 	\begin{tabular}{rS|ccccc}
@@ -437,19 +484,22 @@ Design alternatives has been explored for each function of a wheeled robot contr
 		\bottomrule
 	\end{tabular}
 	\label{table:pugh1-3}
+\end{table}
+
+\begin{table}
 	
 	\centering
 	\caption{Decision-matrix for 1-4: Detect the position of the robot}
-	\begin{tabular}{rS|ccc}
+	\begin{tabular}{rS|cccc}
 		\toprule
-		& \text{(\%)} & \text{1-4C1*} & \textbf{1-4C2} & \text{1-4C3}\\
+		& \text{(\%)} & \text{1-4C1*} & \textbf{1-4C2} & \text{1-4C3} & \textbf{1-4C4}\\
 		\midrule
-		1-4E1 & 6.87 & D & -1 & 1 \\
-		1-4E2 & 38.9 & D & 1 & 1  \\
-		1-4E3 & 38.9 & D & 1 & -1  \\
-		1-4E4 & 15.3 & D & 1 & 1 \\
+		1-4E1 & 6.87 & D & -1 & 1 & -1 \\
+		1-4E2 & 38.9 & D & 1 & 1 & 1 \\
+		1-4E3 & 38.9 & D & 1 & -1 & 1\\
+		1-4E4 & 15.3 & D & 1 & 1 &  1\\
 		\midrule
-		& Total & 0 & \textbf{0.863} & 0.222 \\
+		& Total & 0 & \textbf{0.863} & 0.222 & \textbf{0.863} \\
 		\bottomrule
 	\end{tabular}
 	\label{table:pugh1-4}
@@ -470,11 +520,6 @@ Design alternatives has been explored for each function of a wheeled robot contr
 		\bottomrule
 	\end{tabular}
 	\label{table:pugh1-5}
-	
-
-\end{table}
-
-\begin{table}
 	
 	\centering
 	\caption{Decision-matrix for 1-6: Actuate the movement}
@@ -524,6 +569,11 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\end{tabular}
 	\label{table:pugh2-1}
 	
+\end{table}
+
+\clearpage
+\begin{table}
+	
 	\centering
 	\caption{Decision-matrix for 2-2: Display the current status}
 	\begin{tabular}{rS|ccc}
@@ -557,13 +607,6 @@ Design alternatives has been explored for each function of a wheeled robot contr
 	\end{tabular}
 	\label{table:pugh3-1}
 	
-
-
-\end{table}
-
-\clearpage
-\begin{table}[htp!]
-	
 	\centering
 	\caption{Decision-matrix for 4-1: Contain the water \& fish }
 	\begin{tabular}{rS|ccc}
@@ -580,6 +623,39 @@ Design alternatives has been explored for each function of a wheeled robot contr
 		\bottomrule
 	\end{tabular}
 	\label{table:pugh4-1}
+	
+		\centering
+	\caption{Decision-matrix for 4-2: Feed the fish }
+	\begin{tabular}{rS|cccc}
+		\toprule
+		& \text{(\%)} & \text{4-2C1} & \textbf{4-2C2} & \text{4-2C3*} & \text{4-2C4} \\
+		\midrule
+		4-2E1 & 25.8 & -1 &  1 & D & -1\\
+		4-2E2 & 9.75 & 1 & 0 & D & -1 \\
+		4-2E3 & 43.8 & -1 & 1 & D & 1 \\
+		4-2E4 & 20.7 & 1 & 1 & D & -1 \\
+		\midrule
+		& Total & -0.391 & \textbf{0.902} & 0 &  -0.124 \\
+		\bottomrule
+	\end{tabular}
+	\label{table:pugh4-2}
+\end{table}
+\begin{table}	
+	\centering
+	\caption{Decision-matrix for 4-3: Protect the fish against cats}
+	\begin{tabular}{rS|ccc}
+		\toprule
+		& \text{(\%)} & \text{4-3C1} & \textbf{4-3C2*} & \text{4-3C3} \\
+		\midrule
+		4-3E1 & 33.0 & -1 & D & -1\\
+		4-3E2 & 9.88 & -1 & D & 1 \\
+		4-3E3 & 15.9 & -1 & D & 1 \\
+		4-3E4 & 41.2  & -1 & D & -1 \\
+		\midrule
+		& Total & -1.00 & \textbf{0} & -0.484 \\
+		\bottomrule
+	\end{tabular}
+	\label{table:pugh4-3}
 		
 	\centering
 	\caption{Decision-matrix for 5-1: Store the power }
