--- a/ME304_Supplementary_Material_Syllabus.tex
+++ b/ME304_Supplementary_Material_Syllabus.tex
@@ -1,33 +1,66 @@
-\documentclass[12pt]{article}
-\title{ME304 Supplementary Material Syllabus}
+\documentclass[margin]{scrartcl}
+\setlength{\textheight}{10in}
+\usepackage{Times}
+ \usepackage[compact]{titlesec}
 
+\renewcommand*\thesection{Week \arabic{section}:}
+\renewcommand*\thesubsection{}
 \begin{document}
-\maketitle
+\begin{center}
+	{\Huge ME304 and Supplementary Material Syllabus} \\
+	{\Large ME462 Say My Name 2020 Spring}
+\end{center}
 
-Week 1:
+\section{Introduction and Basic Concepts}
+\textbf{Class:} Basic definitions \\
+\textbf{Extra:} Jupyter introduction and examples
 
-Jupyter introduction and examples.
+\section{Transfer Functions and Block Diagrams}
+\textbf{Class:} Laplace transform, inverse Laplace transform \\ 
+\textbf{Extra:} Time-Laplace domain converter
 
-Week 2:
+\section{Transfer Functions and Block Diagrams}
+\textbf{Class:} Poles and zeros, block diagram definitions, block diagram algebra and simplification \\ 
+\textbf{Extra:} Block diagram representations
 
-Webots introduction and examples.
+\section{Modeling Physical Systems}
+\textbf{Class:} Classification of system variables, system analogues, examples, op-amps \\ 
+\textbf{Extra:} Physical domain analogue introduction
 
-Week 3:
+\section{Modeling Physical Systems}
+\textbf{Class:} Electro-mechanical systems, transforming and transducing devices, linearization \\ 
+\textbf{Extra:} Linearization example with mechanism
 
-Time-Laplace domain converter. Block diagram representations.
-Open and closed loop examples.
+\section{Basic Features of Control Systems}
+\textbf{Class:} Open loop/closed loop control, common controllers, servo characteristics, regulator characteristics \\
+\textbf{Extra:} Open and closed loop examples, controlling physical simulations with controller
 
-Week 4:
+\section{Stability (Midterm 1)}
+\textbf{Class:} Impulse response and stability, Hurwitz criterion, Routh criterion \\
+\textbf{Extra:} 
 
-Physical domain analogue introduction. Controlling physical simulations with controller.
+\section{Time Response}
+\textbf{Class:} Time response of LTI systems \\
+\textbf{Extra:} 
 
-Week 5:
+\section{Steady State Response and Error}
+\textbf{Class:} Steady state error analysis, type number \\
+\textbf{Extra:}
 
-Webots servo simulation and more physical examples. Transducers.
+\section{Transient Response}
+\textbf{Class:}  First and second order systems, approximation for higher order systems \\
+\textbf{Extra:} 
 
-Week 6:
+\section{Transient Response (Midterm 2)} 
+\textbf{Class:} Transient response specifications \\
+\textbf{Extra:} 
 
-Linearization example with mechanism. 
+\section{Frequency Response}
+\textbf{Class:} Steady state outputs of systems to sinusoidal inputs, bode diagrams \\
+\textbf{Extra:} 
 
+\section{Frequency Response (Final)}
+\textbf{Class:} Bode diagrams \\
+\textbf{Extra:} 
 
 \end{document}
