--- a/Linearization_Approach_test.ipynb
+++ b/Linearization_Approach_test.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-25T11:36:27.838271Z",
+     "start_time": "2020-05-25T11:36:27.830254Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -27,7 +32,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,8 +130,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-25T11:36:04.420454Z",
+     "start_time": "2020-05-25T11:36:03.750460Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -195,15 +205,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-25T11:36:09.482180Z",
+     "start_time": "2020-05-25T11:36:08.456195Z"
+    },
     "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9991b08dc77846158466f99a78f906d3",
+       "model_id": "265ba14094034159ac77338819eef802",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,7 +231,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fc071790e074b849039151813e22e45",
+       "model_id": "c5e33e1274da433ba04e9159f44ffec2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -279,8 +293,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-25T11:36:14.611830Z",
+     "start_time": "2020-05-25T11:36:14.602321Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def calc_theta_B(theta_A):\n",
@@ -306,13 +325,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-25T11:36:15.429252Z",
+     "start_time": "2020-05-25T11:36:15.226558Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "daa9d054fc6642ea90ad2c74f6c82edd",
+       "model_id": "9d5c374154ef4413a3ec911e99b47d86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -326,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5f921614c254b098801e9aecf1ff1ff",
+       "model_id": "083df670e26248d3b1f3400eb6e458b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -334,7 +358,7 @@
        "FigureWidget({\n",
        "    'data': [{'name': 'Input Link',\n",
        "              'type': 'scatter',\n",
-       "              'uid': 'e50d…"
+       "              'uid': '95b0…"
       ]
      },
      "metadata": {},
@@ -429,13 +453,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-25T11:36:19.755420Z",
+     "start_time": "2020-05-25T11:36:19.516692Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f78e54616ebf4b86895bcc6443e6c6e3",
+       "model_id": "556db5a09a034751980ced9adf33eda6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -449,7 +478,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf792f8f8f7f4aa199f2a1121a4422d5",
+       "model_id": "970157873fc7474ba27dd7eccd37cd1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -457,7 +486,7 @@
        "FigureWidget({\n",
        "    'data': [{'name': 'Real Output',\n",
        "              'type': 'scatter',\n",
-       "              'uid': '658…"
+       "              'uid': '4e4…"
       ]
      },
      "metadata": {},
@@ -497,9 +526,17 @@
    "source": [
     "Error of linearized output is less than $1\\%$ up to $30^{\\circ}$ input rotation."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -515,7 +552,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.7"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
