--- a/ME304_Supplementary_Material_Syllabus.tex
+++ b/ME304_Supplementary_Material_Syllabus.tex
@@ -37,30 +37,30 @@
 
 \section{Stability (Midterm 1)}
 \textbf{Class:} Impulse response and stability, Hurwitz criterion, Routh criterion \\
-\textbf{Extra:} 
+\textbf{Extra:} Time response of a unicycle with a controller
 
 \section{Time Response}
 \textbf{Class:} Time response of LTI systems \\
-\textbf{Extra:} 
+\textbf{Extra:} Cooking meat with impulse, step and ramp input heater
 
 \section{Steady State Response and Error}
 \textbf{Class:} Steady state error analysis, type number \\
-\textbf{Extra:}
+\textbf{Extra:} Car chase example, ball inside a glass without contact
 
 \section{Transient Response}
-\textbf{Class:}  First and second order systems, approximation for higher order systems \\
-\textbf{Extra:} 
+\textbf{Class:} First and second order systems, approximation for higher order systems \\
+\textbf{Extra:} Load driven by motor approximated as a second order system
 
 \section{Transient Response (Midterm 2)} 
 \textbf{Class:} Transient response specifications \\
-\textbf{Extra:} 
+\textbf{Extra:} Time response characteristics of an elevator
 
 \section{Frequency Response}
 \textbf{Class:} Steady state outputs of systems to sinusoidal inputs \\
-\textbf{Extra:} 
+\textbf{Extra:} Earthquake simulation for people in an apartment building
 
 \section{Frequency Response (Final)}
 \textbf{Class:} Bode diagrams \\
-\textbf{Extra:} 
+\textbf{Extra:} Bode diagram representations
 
 \end{document}
