--- a/week7_unicycle_stability/unicycle_control.ipynb
+++ b/week7_unicycle_stability/unicycle_control.ipynb
@@ -195,8 +195,6 @@
     "    f = np.array([tau, -tau]) # motor is connected between the two generalized coordinates\n",
     "    return f\n",
     "\n",
-    "\n",
-    "\n",
     "# update unicycle \n",
     "def update_unicycle(y, dy, th_desired, dth_desired, dt):\n",
     "    f = control_theta(y, dy, th_desired, dth_desired)\n",
@@ -4546,6 +4544,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
