--- a/week12_earthquake_apartment_simulation/Earthquake_Simulation.ipynb
+++ b/week12_earthquake_apartment_simulation/Earthquake_Simulation.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![https://raw.githubusercontent.com/cinaral/saymyname/master/week12_earthquake_apartment_simulation/Figures/figure11.gif](attachment:figure11.gif)"
+    "![week12_earthquake_apartment_simulation/Figures/figure11.gif](attachment:figure11.gif)"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![https://raw.githubusercontent.com/cinaral/saymyname/master/week12_earthquake_apartment_simulation/Figures/images.png](attachment:images.png)"
+    "![week12_earthquake_apartment_simulation/Figures/images.png](attachment:images.png)"
    ]
   },
   {
