Added week1 intro

--- a/week9_sserror/carchase_notebook.ipynb
+++ b/week9_sserror/carchase_notebook.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-22T15:20:44.887321Z",
+     "start_time": "2020-07-22T15:20:44.836258Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import carchase_game as cg\n",
@@ -16,7 +21,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-22T15:20:45.742047Z",
+     "start_time": "2020-07-22T15:20:45.734042Z"
+    }
+   },
    "outputs": [],
    "source": [
     "m=1000\n",
@@ -57,12 +67,17 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-22T15:24:06.275629Z",
+     "start_time": "2020-07-22T15:24:06.210476Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18f450d768974c3d8cab25bcf842ede0",
+       "model_id": "e97a5d68682442379f0e6f26aa30c367",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,15 +94,20 @@
     "    game.stop()\n",
     "except NameError:\n",
     "    pass\n",
-    "game = cg.Game(x0 , dx0 , y0, dy0, update_carchase, spacing, tire_d , car_l, t0=0, fps=60)\n",
+    "game = cg.Game(0 , 0 , 0, 0, update_carchase, spacing, tire_d , car_l, t0=0, fps=60)\n",
     "game.start()\n",
     "display(game.canvas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-22T15:14:13.184541Z",
+     "start_time": "2020-07-22T15:14:13.174532Z"
+    }
+   },
    "outputs": [],
    "source": [
     "game.stop()"
@@ -95,6 +115,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -110,7 +131,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
