updated example video

--- a/week1_introduction/introduction.ipynb
+++ b/week1_introduction/introduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/cinaral/saymyname/blob/master/week3_block_diagram/04062020Final_Closed_Loop_Canonical_Form_Transfer_Function_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/cinaral/saymyname/blob/master/week1_introduction/introduction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you are currently reading the PDF version of this document, you may click the link at the top to open this notebook in Google Collab. Alternatively, we recommend you install a Jupyter environment on your device. While some of our demonstrations work absolutely fine in Google Collab, for the best experience you will need to run a local instance of Jupyter. We recommend the local instance if you plan on using Jupyter in the future, but if you don't want to go through that right now, this document should be perfectly fine to view in Google Collab. \n",
+    "If you are currently reading the PDF version of this document, you may click the link at the top to open this notebook in Google Collab. Alternatively, we recommend you install a Jupyter environment on your device. Even some of the cells in this introductory document won't work in Google Collab due to safety limitations, and for the best experience you will need to run a local instance of Jupyter. We recommend the local instance if you plan on using Jupyter in the future, but if you don't want to go through that right now, this document should be perfectly fine to view in Google Collab. \n",
     "\n",
     "The most straight-forward way to install Jupyter is through Anaconda data science toolkit. They do a better job at explaining the installation steps over here https://docs.anaconda.com/anaconda/install/.\n",
     "\n",
@@ -207,14 +207,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[This is a link to a video](https://www.youtube.com/watch?v=dQw4w9WgXcQ)"
+    "[This is a link to a Youtube video](https://www.youtube.com/watch?v=dQw4w9WgXcQ)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[And here's a local link to example.txt](example.txt)"
+    "[And here's a local link to example.txt](example_text.txt)"
    ]
   },
   {
@@ -232,14 +232,14 @@
    "metadata": {},
    "source": [
     "Here's a local image embed. Note that the syntax is HTML.\n",
-    "<center><img src=\"example.png\" width=\"400\"></center>"
+    "<center><img src=\"example_image.png\" width=\"400\"></center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And a local video embed.\n",
+    "And a local video embed, it should have sound. (This embed might not work on Google Collab!)\n",
     "<center><video controls src=\"example.webm\" width=\"500\"/></center>"
    ]
   },
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly, you can embed hosted multimedia.\n",
+    "Similarly, you can embed hosted multimedia. (This embed might not work on Google Collab!)\n",
     "<center><video controls src=\"https://giant.gfycat.com/SpiritedRawHare.webm\" width=\"500\"/></center>"
    ]
   },
