Earthquake frequency response, still simulatioless

--- a/week12_earthquake_apartment_simulation/Earthquake_Simulation.ipynb
+++ b/week12_earthquake_apartment_simulation/Earthquake_Simulation.ipynb
@@ -292,18 +292,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import eq_game as eqg\n",
     "import numpy as np\n",
+    "import math\n",
     "from math import sin\n",
     "from scipy.linalg import eigh\n",
     "from numpy.linalg import inv\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "from scipy.integrate import odeint\n",
-    "import scipy.integrate as integrate"
+    "import scipy.integrate as integrate\n",
+    "\n",
+    "import ipycanvas as ipc\n",
+    "from ipywidgets import Image"
    ]
   },
   {
@@ -315,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,56 +356,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]]\n",
-      "[[ 2000. -1000.     0.     0.     0.     0.     0.     0.     0.     0.]\n",
-      " [-1000.  2000. -1000.     0.     0.     0.     0.     0.     0.     0.]\n",
-      " [    0. -1000.  2000. -1000.     0.     0.     0.     0.     0.     0.]\n",
-      " [    0.     0. -1000.  2000. -1000.     0.     0.     0.     0.     0.]\n",
-      " [    0.     0.     0. -1000.  2000. -1000.     0.     0.     0.     0.]\n",
-      " [    0.     0.     0.     0. -1000.  2000. -1000.     0.     0.     0.]\n",
-      " [    0.     0.     0.     0.     0. -1000.  2000. -1000.     0.     0.]\n",
-      " [    0.     0.     0.     0.     0.     0. -1000.  2000. -1000.     0.]\n",
-      " [    0.     0.     0.     0.     0.     0.     0. -1000.  2000. -1000.]\n",
-      " [    0.     0.     0.     0.     0.     0.     0.     0. -1000.  1000.]]\n",
-      "[[ 1.  -0.5  0.   0.   0.   0.   0.   0.   0.   0. ]\n",
-      " [-0.5  1.  -0.5  0.   0.   0.   0.   0.   0.   0. ]\n",
-      " [ 0.  -0.5  1.  -0.5  0.   0.   0.   0.   0.   0. ]\n",
-      " [ 0.   0.  -0.5  1.  -0.5  0.   0.   0.   0.   0. ]\n",
-      " [ 0.   0.   0.  -0.5  1.  -0.5  0.   0.   0.   0. ]\n",
-      " [ 0.   0.   0.   0.  -0.5  1.  -0.5  0.   0.   0. ]\n",
-      " [ 0.   0.   0.   0.   0.  -0.5  1.  -0.5  0.   0. ]\n",
-      " [ 0.   0.   0.   0.   0.   0.  -0.5  1.  -0.5  0. ]\n",
-      " [ 0.   0.   0.   0.   0.   0.   0.  -0.5  1.  -0.5]\n",
-      " [ 0.   0.   0.   0.   0.   0.   0.   0.  -0.5  0.5]]\n",
-      "[[1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "M = np.zeros((dof,dof))\n",
     "K = np.zeros((dof,dof))\n",
@@ -415,10 +373,9 @@
     "      K[dof-1,dof-1] = k\n",
     "      K[i,j+1] = -k\n",
     "      K[i+1,j] = -k\n",
-    "print(M)\n",
-    "print(K)\n",
+    "\n",
     "C = (c/k)*K\n",
-    "print(C)\n",
+    "\n",
     "\n",
     "# K = np.array([[2*k,-k,0,0,0,0,0,0,0,0],\n",
     "#             [-k,2*k,-k,0,0,0,0,0,0,0],\n",
@@ -450,7 +407,7 @@
     "#print(\"C\")\n",
     "#print(C)\n",
     "#print(\"I\")\n",
-    "print(I)"
+    "#print(I)"
    ]
   },
   {
@@ -462,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -497,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us numerically integrate the equation of motion for sinusoidal input;"
+    "Let us numerically integrate the equation of motion for sinusoidal input with zero initial conditions;"
    ]
   },
   {
@@ -506,6 +463,8 @@
    "source": [
     "\\begin{align}\n",
     "M\\ddot{x} + C\\dot{x} + Kx = F \\\\\n",
+    "x(0) = 0\\\\\n",
+    "\\dot{x(0)} = 0\n",
     "\\end{align}"
    ]
   },
@@ -589,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +573,7 @@
     "x8 = []\n",
     "x9 = []\n",
     "x10 = []\n",
-    "\n",
+    " \n",
     "for t in np.arange(0, end_time, time_step):\n",
     "    R[10] = (M_inv[0,0])*F0*sin(omega*t)\n",
     "    Y_new = Y + time_step*(B.dot(Y) + R)\n",
@@ -642,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -780,35 +739,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "import ipycanvas as ipc\n",
-    "import ipyevents as ipe\n",
+    "x0 = np.array([[1], [0], [0], [0], [0], [0], [0], [0], [0], [0]])\n",
+    "dx0 = np.array([[0], [0], [0], [0], [0], [0], [0], [0], [0], [0]])\n",
     "\n",
-    "from ipycanvas import Canvas\n",
-    "\n",
-    "from time import time, sleep\n",
-    "from threading import Thread"
+    "def compute_dynamics(x, dx, t):\n",
+    "    f = np.array([[F0*sin(omega*t)], [0], [0], [0], [0], [0], [0], [0], [0], [0]])\n",
+    "    d2x = np.linalg.inv(M).dot(f - C.dot(dx)-K.dot(x))\n",
+    "    return d2x\n",
+    "def update_building(x, dx, dt):\n",
+    "    d2x = compute_dynamics(x, dx, t)\n",
+    "    dx = dx + d2x*dt\n",
+    "    x = x + dx*dt\n",
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af732fe3210c43ceb8adcdd8d4ef851b",
+       "model_id": "4268a00c4a6740f98d5189f5de501a68",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Canvas(height=300, width=500)"
+       "MultiCanvas(height=300, width=900)"
       ]
      },
      "metadata": {},
@@ -816,18 +780,22 @@
     }
    ],
    "source": [
-    "canvas = Canvas(width=500, height=300)\n",
-    "canvas.fill_rect(300, 25, 30, 20) # x10 for m10\n",
-    "canvas.fill_rect(300, 50, 30, 20) # x9 for m9\n",
-    "canvas.fill_rect(300, 75, 30, 20) # x8 for m8\n",
-    "canvas.fill_rect(300, 100, 30, 20) # x7 for m7\n",
-    "canvas.fill_rect(300, 125, 30, 20) # x6 for m6\n",
-    "canvas.fill_rect(300, 150, 30, 20) # x5 for m5\n",
-    "canvas.fill_rect(300, 175, 30, 20) # x4 for m4\n",
-    "canvas.fill_rect(300, 200, 30, 20) # x3 for m3\n",
-    "canvas.fill_rect(300, 225, 30, 20) # x2 for m2\n",
-    "canvas.fill_rect(300, 250, 30, 20) # x1 for m1\n",
-    "canvas"
+    "try: # try to stop the game first in order to avoid creating redundant threads\n",
+    "    game.stop()\n",
+    "except NameError:\n",
+    "    pass\n",
+    "game = eqg.Game(x0, dx0, update_building, t0=0 , fps=30)\n",
+    "game.start()\n",
+    "display(game.canvas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game.stop()"
    ]
   },
   {
